--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -25,10 +25,10 @@
   "ShortTeamName.Impostor": "Imp",
   "ShortTeamName.Crewmate": "Crew",
   "ShortTeamName.Neutral": "Neut",
-  "YouAreCrewmate": "<size=1.7><color=#ffffff>TEAM:</color> CREWMATES</size>",
-  "YouAreImpostor": "<size=0>.</size>",
-  "YouAreNeutral": "<size=1.7><color=#ffffff>TEAM:</color> NEUTRAL</size>",
-  "YouAreMadmate": "<size=1.7><color=#ffffff>TEAM:</color> IMPOSTORS</size>",
+  "YouAreCrewmate": "<size=1.7><color=#ffffff>You are</color> Crewmate</size>",
+  "YouAreImpostor": "<size=1.7><color=#ffffff>You are:</color> Impostor</size>",
+  "YouAreNeutral": "<size=1.7><color=#ffffff>You are</color> Neutral</size>",
+  "YouAreMadmate": "<size=1.7><color=#ffffff>You are in</color> Impostors <color=#ffffff>team</color></size>",
   "CrewmateSub": "Find and exile the <color=#ff1919>Impostors</color>",
   "ImpostorSub": "Sabotage and kill everyone",
   "NeutralSub": "Work alone to achieve your victory",
@@ -41,19 +41,12 @@
   "ImpostorsCanGuess": "<color=#ff1919>Impostors</color> can guess",
   "NeutralKillersCanGuess": "<color=#ffab1b>Neutral Killers</color> can guess",
   "PassiveNeutralsCanGuess": "Passive <color=#ffab1b>Neutrals</color> can guess",
-  "CovenCanGuess": "<color=#8e44ad>Coven</color> members can guess",
   "CanGuessAddons": "Can Guess Add-ons",
   "CrewCanGuessCrew": "<color=#8cffff>Crewmates</color> Can Guess <color=#8cffff>Crewmate</color> Roles",
   "ImpCanGuessImp": "<color=#ff1919>Impostors</color> Can Guess <color=#ff1919>Impostor</color> Roles",
   "AddonSettingsCrew": "<color=#8cffff>Crewmate</color> Configuration",
   "AddonSettingsImp": "<color=#ff1919>Impostor</color> Configuration",
   "AddonSettingsNeut": "<color=#ffab1b>Neutral</color> Configuration",
-  "ClaimAddonSettings": "Can guess claimable add-ons",
-  "BetrayalAddonSettings": "Can guess betrayal add-ons",
-  "ImpOnlyAddonSettings": "Can guess <color=#ff1919>Impostor</color> add-ons",
-  "CrewOnlyAddonSettings": "Can guess <color=#8cffff>Crewmate</color> add-ons",
-  "NeutralAddonSettings": "Can guess <color=#ffab1b>Neutral</color> add-ons",
-  "BasicAddonSettings": "Can guess global add-ons",
   "ROT.Impostor_Killing": "★ Killing Roles",
   "ROT.Impostor_Support": "★ Support Roles",
   "ROT.Impostor_Concealing": "★ Concealing Roles",
@@ -107,7 +100,6 @@
   "Mare": "Mare",
   "FireWorks": "Fireworker",
   "SerialKiller": "Mercenary",
-  "ShapeMaster": "Shapemaster",
   "Vampire": "Vampire",
   "Warlock": "Warlock",
   "Assassin": "Ninja",
@@ -124,7 +116,7 @@
   "Sniper": "Sniper",
   "EvilTracker": "Evil Tracker",
   "EvilGuesser": "Evil Guesser",
-  "AntiAdminer": "Anti Adminer",
+  "AntiAdminer": "Anti-Adminer",
   "Sans": "Arrogance",
   "Bomber": "Bomber",
   "Scavenger": "Scavenger",
@@ -138,7 +130,7 @@
   "ImperiusCurse": "Soul Catcher",
   "QuickShooter": "Quick Shooter",
   "Camouflager": "Camouflager",
-  "Eraser": "Eraser",
+  "Eraser": "Evil Eraser",
   "OverKiller": "Butcher",
   "Hangman": "Hangman",
   "Swooper": "Swooper",
@@ -389,7 +381,6 @@
   "MareInfo": "Kill in the dark",
   "FireWorksInfo": "Go out with a BANG",
   "SerialKillerInfo": "Keep killing, else you suicide",
-  "ShapeMasterInfo": "Swiftly kill with no shift cooldown",
   "VampireInfo": "Your kills are delayed",
   "WarlockInfo": "Curse crewmates & shift to make them kill",
   "AssassinInfo": "Mark a target, then shift to kill them",
@@ -497,10 +488,8 @@
   "SpiritualistInfo": "You see where a ghost is",
   "ChameleonInfo": "Vent to disguise into your surroundings",
   "ParityCopInfo": "Validate the alignments of two players",
-  "AdmirerInfo": "Choose a player to side with you",
   "TimeMasterInfo": "Rewind time to dodge attacks!",
   "CrusaderInfo": "Kill a player's attacker",
-  "ReverieInfo": "Your cooldown decreases with each kill you get",
   "ArsonistInfo": "Douse everyone and ignite",
   "JesterInfo": "Get voted out",
   "OpportunistInfo": "Stay alive until the end",
@@ -623,7 +612,6 @@
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will decrease, but if you eliminate anyone else, your next kill cooldown will increase; the target will switch after a predetermined time.",
   "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
-  "ShapeMasterInfoLong": "(Impostors):\\nThe Shapemaster has no Shapeshift cooldown, but their default Shapeshift duration is shorter.",
   "MareInfoLong": "(Add-ons):\\nAs the Mare, you have a low kill cooldown but can only kill during lights. Additionally, your name will appear in red during lights. Only assigned to Impostors and cannot be guessed.",
   "VampireInfoLong": "(Impostors):\\nVampire bites delay death. Meeting kills bitten. Biting Bait = normal kill, self-report.",
   "WarlockInfoLong": "(Impostors):\\nWarlock can curse a player while not Shapeshifted. If they Shapeshift/Pet after cursing, the closest player to the cursed one is killed, regardless of distance. Only one player can be cursed at a time.\\n\\nKilling, shapeshifting/petting, and cursing all have separate cooldowns. The Warlock may freeze in place for a few seconds after killing via cursed player.",
@@ -641,7 +629,7 @@
   "SniperInfoLong": "(Impostors):\\nIf you want to shoot players from a distance, you'll need to follow these steps. First, you must shapeshift or pet twice to make a successful snipe. Once you've done that, imagine an arrow pointing from your first shapeshift or petting location to your unshift or second petting location. That arrow will show you the direction in which the snipe will be made. Remember that the snipe only kills the first person in its path. Also, you won't be able to kill anyone normally until you use up all of your ammo.",
   "EvilTrackerInfoLong": "(Impostors):\\nThe Evil Tracker can track and shapeshift to switch the tracking target but will unshift immediately after. The arrow below their name indicates the target's direction. They receive a kill flash when their teammate kills.",
   "EvilGuesserInfoLong": "(Impostors):\\nThe Evil Guesser can guess a player's role during the meeting using the command /bt [player id] [role]. If the guess is correct, the target dies; if wrong, the Evil Guesser dies. Use the /id command to view the ID of all players.",
-  "AntiAdminerInfoLong": "(Impostors):\\nAnti Adminer can detect nearby crewmates or neutrals around devices such as Cameras, Admin Table, Vitals, DoorLog, etc. Note that they cannot confirm if the player is using the device, only that someone is close to it.\\n\\nDepending on a setting, you may have an additional ability: You can shapeshift to alert every player using a device to leave it. They have a few seconds to step away from the devices, or else they die.",
+  "AntiAdminerInfoLong": "(Impostors):\\nAnti-Adminer can detect nearby crewmates or neutrals around devices such as Cameras, Admin Table, Vitals, DoorLog, etc. Note that they cannot confirm if the player is using the device, only that someone is close to it.\\n\\nDepending on a setting, you may have an additional ability: You can shapeshift to alert every player using a device to leave it. They have a few seconds to step away from the devices, or else they die.",
   "SansInfoLong": "(Impostors):\\nThe Arrogance reduces their kill cooldown with each successful kill of theirs.",
   "BomberInfoLong": "(Impostors):\\nThe Bomber can use the shapeshift/pet button to self-explode, killing players within a certain range. But as a price, the Bomber will also die. Note: All players will see a kill flash when the Bomber explodes.",
   "ScavengerInfoLong": "(Impostors):\\nScavenger kills do not leave dead bodies behind. In addition, if the victim is a bait, no self-report will be made.",
@@ -1150,7 +1138,6 @@
   "MenuTitle.Settings": "★ Settings ★",
   "MenuTitle.TaskSettings": "★ Task Management ★",
   "MenuTitle.Guessers": "★ Guesser Mode ★",
-  "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
   "MenuTitle.CTA": "★ Custom Team Assignment ★",
   "MenuTitle.AFKDetection": "★ AFK Detection ★",
   "ReadyCheckMessage": "The host is checking how many players are ready to start the game.\\nPlease type <b>/ready</b> to let the host know you're not AFK.",
@@ -1159,7 +1146,6 @@
   "PlayersNotReadyTitle": "<#ffff00><#ffab1b>{0}</color> players are not ready!</color> They are:",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
-  "SidekickKnowOtherSidekickRole": "<color=#00b4eb>Sidekicks</color> know the roles of other <color=#00b4eb>Sidekicks</color>",
   "SidekickCanKillSidekick": "<color=#00b4eb>Sidekicks</color> can kill other <color=#00b4eb>Sidekicks</color>",
   "LegacyMafia": "Use Legacy Version",
   "AsthmaticMinRedTime": "Minimum Red Time",
@@ -1318,7 +1304,6 @@
   "SheriffShowShotLimit": "Display Shot Limit next to Role Name",
   "SheriffCanKillAllAlive": "Can Kill when Everyone is Alive",
   "SheriffCanKillCharmed": "Can kill <color=#cf6acd>Charmed</color> players",
-  "SheriffCanKillEgoist": "Can Kill <color=#5600ff>Egoists</color>",
   "SheriffCanKillSidekick": "Can Kill <color=#00b4eb>Sidekicks</color>",
   "SheriffCanKillLovers": "Can Kill <color=#ff9ace>Lovers</color>",
   "SheriffCanKillMadmate": "Can Kill <color=#ff1919>Madmates</color>",
@@ -2763,7 +2748,7 @@
   "ImpRemain": "{0} Impostors remaining",
   "NeutralRemain": "{0} <color=#ffab1b>Neutrals</color> remain",
   "OneNeutralRemain": "1 <color=#ffab1b>Neutral</color> remains",
-  "IsGood": "{0} was a <color=#8cffff>good guy</color>",
+  "IsGood": "{0} was a <color=#8cffff>Crewmate</color>",
   "BelongTo": "{0} belongs to {1}",
   "GG": "GG! No more killers remain. <#8cffff>Crewmates</color> win!",
   "IWonderWhatsLeft": "<#ff1919>Impostors</color> are dead, but <#ffab1b>Neutrals</color> may remain.",
@@ -4163,72 +4148,72 @@
   "HiderSpeed": "Hider Speed",
   "SeekerCanVent": "Seeker Can Vent",
   "BlindTime": "Blind Time",
-  "Hider": "HIDER",
-  "HiderInfo": "COMPLETE TASKS TO WIN",
-  "HiderInfoLong": "COMPLETE TASKS TO WIN",
-  "Seeker": "SEEKER",
-  "SeekerInfo": "KILL ALL HIDERS TO WIN",
-  "SeekerInfoLong": "KILL ALL HIDERS TO WIN",
-  "Fox": "FOX",
-  "FoxInfo": "SURVIVE UNTIL THE END TO WIN",
-  "FoxInfoLong": "SURVIVE UNTIL THE END TO WIN",
+  "Hider": "Hider",
+  "HiderInfo": "Complete tasks and survive until the end",
+  "HiderInfoLong": "Complete tasks and survive until the end",
+  "Seeker": "Seeker",
+  "SeekerInfo": "Kill all Hiders to win",
+  "SeekerInfoLong": "Kill all Hiders to win",
+  "Fox": "Fox",
+  "FoxInfo": "Survive until the end to win",
+  "FoxInfoLong": "Survive until the end to win",
   "FoxVision": "Fox Vision",
   "FoxSpeed": "Fox Speed",
-  "Troll": "TROLL",
-  "TrollInfo": "GET KILLED TO WIN",
-  "TrollInfoLong": "GET KILLED TO WIN",
+  "Troll": "Troll",
+  "TrollInfo": "Get killed to win",
+  "TrollInfoLong": "Get killed to win",
   "TrollVision": "Troll Vision",
   "TrollSpeed": "Troll Speed",
-  "Jumper": "JUMPER",
-  "JumperInfo": "USE VENTS TO HIDE FROM SEEKERS",
-  "JumperInfoLong": "USE VENTS TO HIDE FROM SEEKERS",
+  "Jumper": "Jumper",
+  "JumperInfo": "Use vents to hide from Seekers",
+  "JumperInfoLong": "Use vents to hide from Seekers",
   "JumperVision": "Jumper Vision",
   "JumperSpeed": "Jumper Speed",
-  "Detector": "DETECTOR",
-  "DetectorInfo": "YOU KNOW WHERE SEEKERS ARE",
-  "DetectorInfoLong": "YOU KNOW WHERE SEEKERS ARE",
+  "Detector": "Detector",
+  "DetectorInfo": "You know where the Seekers are",
+  "DetectorInfoLong": "You know where the Seekers are",
   "DetectorFrequency": "Info about Seekers appears every",
   "DetectorVision": "Detector Vision",
   "DetectorSpeed": "Detector Speed",
   "DetectorNotify": "A Seeker is in <#00ffa5>{0}</color>",
-  "Jet": "JET",
-  "JetInfo": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
-  "JetInfoLong": "PET TO BECOME FAST AND ESCAPE FROM SEEKERS",
+  "Jet": "Jet",
+  "JetInfo": "Pet to become fast and escape from Seekers",
+  "JetInfoLong": "Pet to become fast and escape from Seekers",
   "JetSpeedIncreased": "Jet Increased Speed",
   "JetDuration": "Jet Duration",
   "JetCooldown": "Jet Cooldown",
   "JetVision": "Jet Vision",
   "JetSpeed": "Jet Speed",
-  "Dasher": "DASHER",
-  "DasherInfo": "PET TO BECOME FAST AND CATCH HIDERS",
-  "DasherInfoLong": "PET TO BECOME FAST AND CATCH HIDERS",
+  "Dasher": "Dasher",
+  "DasherInfo": "Pet to become fast and catch Hiders",
+  "DasherInfoLong": "Pet to become fast and catch Hiders",
   "DasherSpeedIncreased": "Dasher Increased Speed",
   "DasherDuration": "Dasher Duration",
   "DasherCooldown": "Dasher Cooldown",
   "DasherVision": "Dasher Vision",
   "DasherSpeed": "Dasher Speed",
-  "Locator": "LOCATOR",
-  "LocatorInfo": "YOU GET CLUES TO FIND HIDERS",
-  "LocatorInfoLong": "YOU GET CLUES TO FIND HIDERS",
+  "Locator": "Locator",
+  "LocatorInfo": "You get clues to find Hiders",
+  "LocatorInfoLong": "You get clues to find Hiders",
   "LocatorDuration": "Locator Arrow Duration",
   "LocatorFrequency": "Locator Arrow Frequency",
   "LocatorTargetKnows": "Hiders know when they are located",
   "LocatorVision": "Locator Vision",
   "LocatorSpeed": "Locator Speed",
   "LocatorNotify": "A Locator is currently tracking you",
-  "Venter": "VENTER",
-  "VenterInfo": "USE VENTS TO CATCH HIDERS",
-  "VenterInfoLong": "USE VENTS TO CATCH HIDERS",
+  "Venter": "Venter",
+  "VenterInfo": "Use vents to catch Hiders",
+  "VenterInfoLong": "Use vents to catch Hiders",
   "VenterVision": "Venter Vision",
   "VenterSpeed": "Venter Speed",
-  "Agent": "AGENT",
-  "AgentInfo": "YOU'RE AN IMPOSTOR AMONG HIDERS",
-  "AgentInfoLong": "YOU'RE AN IMPOSTOR AMONG HIDERS",
+  "Agent": "Agent",
+  "AgentInfo": "You're an Impostor among Hiders",
+  "AgentInfoLong": "You're an Impostor among Hiders",
   "AgentVision": "Agent Vision",
   "AgentSpeed": "Agent Speed",
-  "Taskinator": "TASKINATOR",
-  "TaskinatorInfo": "COMPLETE TASKS TO WIN",
-  "TaskinatorInfoLong": "COMPLETE TASKS TO WIN",
+  "Taskinator": "Taskinator",
+  "TaskinatorInfo": "Complete tasks to win",
+  "TaskinatorInfoLong": "Complete tasks to win",
   "TaskinatorCanWinAfterDeath": "Taskinator Can Win After Death",
   "TaskinatorVision": "Taskinator Vision",
   "TaskinatorSpeed": "Taskinator Speed",
@@ -4577,23 +4562,6 @@
   "CanRememberCrewPower": "Can Remember <#8cffff>Crewmate</color> <#fbff00>Power</color> Roles",
   "IncompatibleNeutralMode": "If neutral is incompatible, turn into",
   "ImmuneToAttacksWhenTasksDone": "Immune to attacks on task completion",
-  "OptionWatcher": "Can sell Watcher",
-  "OptionKnighted": "Can sell Knighted",
-  "OptionSeer": "Can sell Seer",
-  "OptionBait": "Can sell Bait",
-  "OptionBeartrap": "Can sell Beartrap",
-  "OptionTiebreaker": "Can sell Tiebreaker",
-  "OptionOnbound": "Can sell Onbound",
-  "OptionDisregarded": "Can sell Disregarded",
-  "OptionLucky": "Can sell Lucky",
-  "OptionAutopsy": "Can sell Autopsy",
-  "OptionLoyal": "Can sell Loyal",
-  "OptionSchizo": "Can sell Schizophrenic",
-  "OptionNecroview": "Can sell Necroview",
-  "OptionGravestone": "Can sell Gravestone",
-  "OptionGlow": "Can sell Glow",
-  "OptionBewilder": "Can sell Bewilder",
-  "OptionAvenger": "Can sell Avenger",
   "TwisterCooldown": "Twist Cooldown",
   "TwisterButtonText": "Twist",
   "MainMenu.SettingsButton": "Settings",
@@ -4933,20 +4901,6 @@
   "DoomsayerGuessCountTitle": "[ ★ Doomsayer ★ ]",
   "DoomsayerGuessSameRoleAgainMsg": "You tried to guess the same role or add-on that you guessed before",
   "DoYourTasksPlease": "Please do your tasks!",
-  "Developer": "Developer",
-  "Sponsor": "Sponsor",
-  "OriginalDev": "Original Developer",
-  "NewDev": "Main Developer",
-  "Booster": "Server Booster",
-  "Translator": "Translator",
-  "MainDev": "Creator",
-  "Art": "Artist",
-  "RoleDev": "Role Developer",
-  "TechSup": "Tech. Support",
-  "FeatureDev": "Feature Developer",
-  "TranEN": "English",
-  "TranRU": "Russian",
-  "TranCHT": "Chinese Traditional",
   "OnlyShowPart": "Shown only part",
   "DCNotify.Hacking": "You were <color=#ff1919>banned</color> for hacking.\\n\\nPlease stop.",
   "DCNotify.Banned": "You were <color=#ff1919>banned</color> from this lobby.\\n\\nContact the host if this was a mistake.",
