--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2814,11 +2814,7 @@
   "FungleChance": "Chance that the map is The Fungle",
   "CamouflageMode.Default": "Default",
   "CamouflageMode.Host": "<color=#FFFF00>Host</color>",
-  "CamouflageMode.Karpe": "KARPED1EM",
-  "CamouflageMode.Lauryn": "Lauryn",
-  "CamouflageMode.Moe": "Moe",
-  "CamouflageMode.Pyro": "Pyro",
-  "CamouflageMode.ryuk": "<color=#9e2424>ryuk</color>",
+  "CamouflageMode.Karpe": "<color=#ffc0cb>KARPED1EM</color>",
   "CamouflageMode.Gurge44": "<color=#ffe600>Gurge44</color>",
   "CamouflageMode.TommyXL": "<color=#EC7578>TommyXL</color>",
   "pet_Bedcrab": "Bedcrab",
@@ -4677,7 +4673,6 @@
   "President.DecreeAlreadyUsedMessage": "You have already used this decree or it isn't enabled!",
   "President.DecreeAlreadyChosenThisMeetingMessage": "You have already chosen a decree this meeting!",
   "President.UsedDecreeMessage.RevealMessage": "{0} is the <#30916f>President</color>!",
-  "President.Recruit.TargetNotCrewmateMessage": "You can only recruit <#8cffff>crewmates!</color>",
   "GuessPresident": "You cannot guess a revealed <#30916f>President</color>.",
   "GuessErased": "You cannot guess a player's role that has been erased.",
   "Alchemist": "Alchemist",
