Added some suggestions

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -25,10 +25,10 @@
   "ShortTeamName.Impostor": "Imp",
   "ShortTeamName.Crewmate": "Crew",
   "ShortTeamName.Neutral": "Neut",
-  "YouAreCrewmate": "<size=1.7><color=#ffffff>You are</color> Crewmate</size>",
-  "YouAreImpostor": "<size=1.7><color=#ffffff>You are</color> Impostor</size>",
-  "YouAreNeutral": "<size=1.7><color=#ffffff>You are</color> Neutral</size>",
-  "YouAreMadmate": "<size=1.7><color=#ffffff>You are in</color> Impostors <color=#ffffff>team</color></size>",
+  "YouAreCrewmate": "<size=1.7><color=#ffffff>You are a</color> Crewmate</size>",
+  "YouAreImpostor": "<size=1.7><color=#ffffff>You are an</color> Impostor</size>",
+  "YouAreNeutral": "<size=1.7><color=#ffffff>You are a</color> Neutral</size>",
+  "YouAreMadmate": "<size=1.7><color=#ffffff>You are in the</color> Impostor <color=#ffffff>team</color></size>",
   "CrewmateSub": "Find and exile the <color=#ff1919>Impostors</color>",
   "ImpostorSub": "Sabotage and kill everyone",
   "NeutralSub": "Work alone to achieve your victory",
@@ -810,7 +810,7 @@
   "RascalInfoLong": "(Add-ons):\\nAs the Rascal, you can die to the Sheriff, and Snitch can find you if Snitch can find madmates.\\n\\nOnly assigned to Crewmates, cannot be assigned by the Merchant.",
   "SoullessInfoLong": "(Add-ons):\\nWhen a Cursed Soul snatches your soul, you get this add-on.\\n\\nYou are not counted as alive.",
   "GravestoneInfoLong": "(Add-ons):\\nAs the Gravestone, your role is revealed to everyone when you die.",
-  "LazyInfoLong": "(Add-ons):\\nAs the Lazy, you are assigned a single short task and are immune to Warlocks, Puppeteers, and Gangsters.",
+  "LazyInfoLong": "(Add-ons):\\nAs the Lazy, you are too lazy to walk to the meeting table when meetings are called, so you start the next round exactly where you ended the previous one, and you're also immune to Warlocks, Puppeteers, and Gangsters.",
   "AutopsyInfoLong": "(Add-ons):\\nAs the Autopsy, you can see how people died.\\n\\nCannot be assigned to Doctor, Tracefinder, Scientist, or Sunnyboy.",
   "LoyalInfoLong": "(Add-ons):\\nAs the Loyal, you cannot be recruited by roles such as Jackal or Cultist.\\n\\nCannot be assigned to neutrals.",
   "EvilSpiritInfoLong": "(Add-ons):\\nAs Evil Spirit, it's your job to help the Spiritcaller to victory. You can use your Haunt button to freeze players and reduce their vision. Alternatively, you can use your Haunt button to give the Spiritcaller a shield against a kill attempt temporarily.",
@@ -1006,6 +1006,7 @@
   "GameStateCommand.ShowTasks": "Show amount of completed tasks",
   "MinPlayersForGameStateCommand": "Minimum alive players to use this command",
   "EveryoneSeesDeathReasons": "Everyone Sees Death Reasons",
+  "BlockVentMovement": "Block Movement Between Vents (while in a vent)",
   "DoorsResetMode": "Mode",
   "AllClosed": "Close All",
   "AllOpen": "Open All",
@@ -2734,6 +2735,7 @@
   "CountdownText": "<color=#00ffa5>Re-Entering Lobby in</color> <b>{0}</b>s",
   "EAC.CheatDetected.HighLevel": "Warning: EAC detected High Level of cheats.",
   "EAC.CheatDetected.LowLevel": "Warning: EAC detected Low Level of cheats. One of the players is hacking.",
+  "EnableMovementChecking": "Enable EAC Checks for Invalid Movement (against speed hacks) (may cause false positives)",
   "DisableVoteBan": "Disable Vote-Kick (prevent hackers from banning everyone)",
   "PlayerIsRole": "{0} was {1}.",
   "PlayerExiled": "{0} was ejected...",
