--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4055,6 +4055,7 @@
   "Speedrun_CanKillSuffixInfo": "<#00ffa5>Time:</color> <#ffffff>{3}s</color>\\n<size=80%><#ffff00>Alive players: <#ffab1b>{0}</color>/{1}</color>\\n<#ff1919>Kill everyone to win</color>\\n<size=70%><#888888>Apart from you, <#ffffff>{2}</color> players can kill</color></size></size>",
   "Speedrun_DoTasksSuffixInfo": "<#00ffa5>Time:</color> <#ffffff>{4}s</color>\\n<size=70%><#888888>Alive players: <#ffffff>{1}</color>/{2}</color>\\n<size=80%><#ffff00>Remaining tasks: {0}</color>\\n<#00ffa5>Finish your tasks</color>\\n<size=70%><#ffab1b><#ffffff>{3}</color> players can kill</color></size></size></size>",
   "Speedrun_CompletedTasks": "<#00ff00>You're done with tasks!</color>",
+  "Speedrun_KillingPlayer": "<#ff1919>KILLING</color>",
   "Runner": "Speedrunner",
   "RunnerInfo": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
   "RunnerInfoLong": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
@@ -4125,7 +4126,7 @@
   "NDPlayerInfoLong": "SURVIVE ALL NATURAL DISASTERS TO WIN",
   "RoomRush": "ROOM RUSH",
   "ModeRoomRush": "Gamemode: Room Rush",
-  "ModeDescribe.RoomRush": "In the Room Rush gamemode, everyone has to get to a specific room as fast as possible. The last player to get there dies. The last player alive wins!\\nOh yeah, and there's also a time limit. Everyone who doesn't get to the room in the specified time dies. Seems easy, right? Well.... When the first 2 players enter the correct room, the time limit gets set to a lower amount, like 5 seconds! Good luck!\\n\\nYou can see the room you have to get to below your name.\\nDepending on the settings, everyone may be able to vent limited times.\\nOh and I almost forgot, there may be some twists for individual players in each round....",
+  "ModeDescribe.RoomRush": "In the Room Rush gamemode, everyone has to get to a specific room as fast as possible. The last player to get there dies. The last player alive wins!\\nOh yeah, and there's also a time limit. Everyone who doesn't get to the room in the specified time dies. Seems easy, right? Well.... When the first 2 players enter the correct room, the time limit gets set to a lower amount, like a few seconds! Good luck!\\n\\nYou can see the room you have to get to below your name.\\nDepending on the settings, everyone may be able to vent limited times.\\nOh and I almost forgot, there may be some twists for individual players in each round....",
   "RR_TimeWhenTwoPlayersEntersRoom": "When the first two players enter the correct room, the time limit is set to",
   "RR_VentTimes": "Times each player can vent",
   "RR_Tutorial_1": "<#ffab1b><size=80%>Tutorial</size></color>\\nHello! Welcome to Room Rush!\\n",
@@ -4135,6 +4136,7 @@
   "RR_VentsRemaining": "<size=80%>Remaining vent uses: {0}</size>",
   "RR_GoalReached": "<#00ff00>Goal Reached</color>",
   "RR_YouWereLast": "<#ff1919>You were the last to get to the room</color>",
+  "RR_ReadyQM": "Ready?",
   "RRPlayer": "Room Rush",
   "RRPlayerInfo": "GET TO THE ROOM ASAP",
   "RRPlayerInfoLong": "GET TO THE ROOM ASAP",
