--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4127,6 +4127,7 @@
   "RoomRush": "ROOM RUSH",
   "ModeRoomRush": "Gamemode: Room Rush",
   "ModeDescribe.RoomRush": "In the Room Rush gamemode, everyone has to get to a specific room as fast as possible. The last player to get there dies. The last player alive wins!\\nOh yeah, and there's also a time limit. Everyone who doesn't get to the room in the specified time dies. Seems easy, right? Well.... When the first 2 players enter the correct room, the time limit gets set to a lower amount, like a few seconds! Good luck!\\n\\nYou can see the room you have to get to below your name.\\nDepending on the settings, everyone may be able to vent limited times.\\nOh and I almost forgot, there may be some twists for individual players in each round....",
+  "RR_GlobalTimeMultiplier": "Global Time Multiplier (for adjusting the difficulty)",
   "RR_TimeWhenTwoPlayersEntersRoom": "When the first two players enter the correct room, the time limit is set to",
   "RR_VentTimes": "Times each player can vent",
   "RR_Tutorial_1": "<#ffab1b><size=80%>Tutorial</size></color>\\nHello! Welcome to Room Rush!\\n",
