--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4126,16 +4126,15 @@
   "NDPlayerInfoLong": "SURVIVE ALL NATURAL DISASTERS TO WIN",
   "RoomRush": "ROOM RUSH",
   "ModeRoomRush": "Gamemode: Room Rush",
-  "ModeDescribe.RoomRush": "In the Room Rush gamemode, everyone has to get to a specific room as fast as possible. The last player to get there dies. The last player alive wins!\\nOh yeah, and there's also a time limit. Everyone who doesn't get to the room in the specified time dies. Seems easy, right? Well.... When the first 2 players enter the correct room, the time limit gets set to a lower amount, like a few seconds! Good luck!\\n\\nYou can see the room you have to get to below your name.\\nDepending on the settings, everyone may be able to vent limited times.\\nOh and I almost forgot, there may be some twists for individual players in each round....",
+  "ModeDescribe.RoomRush": "In the Room Rush gamemode, everyone has to get to a specific room as fast as possible. The last player to get there dies. The last player alive wins!\\nOh yeah, and there's also a time limit. Everyone who doesn't get to the room in the specified time dies. Seems easy, right? Well.... When the first 2 players enter the correct room, the time limit gets set to a lower amount, like a few seconds! Good luck!\\n\\nYou can see the room you have to get to below your name.\\nDepending on the settings, everyone may be able to vent limited times.",
   "RR_GlobalTimeMultiplier": "Global Time Multiplier (for adjusting the difficulty)",
   "RR_TimeWhenTwoPlayersEntersRoom": "When the first two players enter the correct room, the time limit is set to",
   "RR_VentTimes": "Times each player can vent",
   "RR_Tutorial_1": "<#ffab1b><size=80%>Tutorial</size></color>\\nHello! Welcome to Room Rush!\\n",
   "RR_Tutorial_2": "The goal of this gamemode is to get to the room you see under your name as fast as possible.",
   "RR_Tutorial_3": "When the first two players enter the correct room, the time limit is set to 5 seconds.",
-  "RR_Tutorial_4": "If you don't get to the room in time, you die.\\nGood luck!",
+  "RR_Tutorial_4": "If you are last to or don't get to the room in time, you die.\\nGood luck!",
   "RR_VentsRemaining": "<size=80%>Remaining vent uses: {0}</size>",
-  "RR_GoalReached": "<#00ff00>Goal Reached</color>",
   "RR_YouWereLast": "<#ff1919>You were the last to get to the room</color>",
   "RR_ReadyQM": "Ready?",
   "RRPlayer": "Room Rush",
