--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1794,6 +1794,7 @@
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
+  "NotifyGameEnding": "<#ff0000>GAME END NOTIFY</color>\\n<#ffff00>This game has already ended. If it didn't end for you, please leave the game and rejoin the lobby. This is a vanilla bug. Sorry for the inconvenience.</color>",
   "DiedR1Warning": "<#ffff00>(Died First in Last Game)</color>",
   "GLHF": "Good Luck & Have Fun!",
   "DeputyHandcuffCooldown": "Handcuff Cooldown",
