--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4135,7 +4135,7 @@
   "RR_VentTimes": "Times each player can vent",
   "RR_Tutorial_1": "<#ffab1b><size=80%>Tutorial</size></color>\\nHello! Welcome to Room Rush!\\n",
   "RR_Tutorial_2": "The goal of this gamemode is to get to the room you see under your name as fast as possible.",
-  "RR_Tutorial_3": "When the first two players enter the correct room, the time limit is set to 5 seconds.",
+  "RR_Tutorial_3": "When the first two players enter the correct room, the time limit is set to a few seconds.",
   "RR_Tutorial_4": "If you are last to or don't get to the room in time, you die.\\nGood luck!",
   "RR_VentsRemaining": "<size=80%>Remaining vent uses: {0}</size>",
   "RR_YouWereLast": "<#ff1919>You were the last to get to the room</color>",
@@ -5027,5 +5027,6 @@
   "RoleSelected": "<b>The role of {0} in the next game will be{1}</b>",
   "UpReplacedMessage": "/up was replaced by /setrole which allows you to set anyone's role for any game by typing '/setrole (ID) (ROLE)'. You can view ID's with /id.\nTo set your own role like with /up, you need to do '/setrole 0 (ROLE)'.",
   "PingText": "Ping",
-  "SettingsForRoleText": "Settings for"
+  "SettingsForRoleText": "Settings for",
+  "NotAssigned": "-"
 }
