--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -758,7 +758,7 @@
   "VultureInfoLong": "(Neutrals):\\nAs the Vulture, report bodies to win!\\n\\nWhen you report a body, if your eat cooldown is up, you'll eat the body (makes it unreportable).\\nIf your eat ability is still on cooldown, then you'll report the body normally.\\n\\nAdditionally, you'll report bodies normally if the maximum bodies eaten per round is reached.",
   "MedusaInfoLong": "(Neutrals):\\nAs the Medusa, you can stone bodies much like cleaning a body when your kill cooldown is up. Stoned bodies cannot be reported.\\n\\nKill everyone to win.",
   "SpiritcallerInfoLong": "(Neutrals):\\nAs the Spiritcaller, your victims become Evil Spirits after they die. These spirits can help you win by freezing other players for a short time and/or blocking their vision. Alternatively, the spirits can give you a shield that protects you briefly from an attempted kill.",
-  "AmnesiacInfoLong": "(Neutrals):\\nAs the Amnesiac, use your kill button on a player to copy someone's role.\\n\\nIf the target was an Impostor, you'll become a <b><color=#ff1919>Renegade</color></b>.\\nIf the target was a crewmate, you'll become a <b><color=#FFB347>Sheriff</color></b>.\\nIf the target was a passive neutral or a neutral killer not specified, you'll become the role defined in the settings.\\nIf the target was a neutral killer of a select few, you'll become the role they are.",
+  "AmnesiacInfoLong": "(Neutrals):\\nAs the Amnesiac, use your kill or report button (depends on the Host's settings) on a player to copy someone's role.\\n\\nIf the target was an Impostor, you'll become a <b><color=#ff1919>Renegade</color></b>.\\nIf the target was a crewmate, you'll become a <b><color=#FFB347>Sheriff</color></b>.\\nIf the target was a passive neutral or a neutral killer not specified, you'll become the role defined in the settings.\\nIf the target was a neutral killer of a select few, you'll become the role they are.",
   "DoomsayerInfoLong": "(Neutrals):\\nThe Doomsayer can guess the role of a certain player during the meeting. If the Doomsayer guesses a certain number of roles (the number depends on the host settings), then he wins.\\n\\nThe guessing command is: /bt [player id] [role]\\nYou can see the player's id before the player's name, or use the /id command to view the id of all players.",
   "LastImpostorInfoLong": "(Add-ons):\\nLast Impostor gets reduced kill cooldown.",
   "LoversInfoLong": "(Add-ons),\\nLovers win together and may die together if one is exiled or killed. They can see the ♥ mark next to each other's name. If one of the lovers wins at the end, the other wins too.",
@@ -1375,6 +1375,7 @@
   "PrivateChat": "Enable Private Chat for <color=#ff9ace>Lovers</color> <#ffff00>(VERY EXPERIMENTAL!!!!)</color> (REQUIRES DOUBLE EJECTION SCREEN)",
   "GuessAbility": "Guessers Can Guess <color=#ff9ace>Lovers</color>",
   "AddonCanBeGuessed": "Can be Guessed",
+  "ConvertedAddonCanBeGuessed": "{role} can be guessed",
   "Untouched": "Global Setting Decides",
   "GuessLovers": "Sorry, host's settings do not allow to guess <color=#ff9ace>Lovers</color>.",
   "VanillaCrewmateCannotBeGuessed": "Crewmate role cannot be guessed",
@@ -4335,6 +4336,12 @@
   "Wizard.Buff.Vision": "Vision",
   "Wizard.Buff.KCD": "Kill Cooldown",
   "Wizard.SelectedBuff": "<#00ffa5>Selected Buff:</color> <b>{0}</b> {1}{2}",
+  "Wizard.MinSpeedValue": "Minimum Speed that can be given to players",
+  "Wizard.MinVisionValue": "Minimum Vision that can be given to players",
+  "Wizard.MinKCDValue": "Minimum Kill Cooldown that can be given to players",
+  "Wizard.MaxSpeedValue": "Maximum Speed that can be given to players",
+  "Wizard.MaxVisionValue": "Maximum Vision that can be given to players",
+  "Wizard.MaxKCDValue": "Maximum Kill Cooldown that can be given to players",
   "Oxyman": "Oxyman",
   "OxymanInfo": "Your Oxygen Level Affects Everything",
   "OxymanInfoLong": "(Crewmates):\\nAs the Oxyman, you have an Oxygen level below your name. The Oxygen level decreases overtime. You have to vent to increase your Oxygen. If the Oxygen level reaches 0%, you die. If it's very low, you're blind. If it's low, you're slower. If it's high, you're faster. If it's very high, you're invulnerable.",
