Fixed can't use Translation + Fixed some shit
Fixed can't use Translation + Fixed some shit

--- a/Resources/Lang/zh_CN.json
+++ b/Resources/Lang/zh_CN.json
@@ -6,7 +6,7 @@
   "HostColor": "#4bf4ff",
   "Icon": "♥",
   "NameColor": "#00ffa5",
-  "Server": "<#00ffa5>当前服务器:</color> <b>{0}</b>",
+  "Server": "<#00ffa5>服务器:</color> <b>{0}</b>",
   "SubText.Crewmate": "光终将普照，<color=#ff1919>传之于众生，而发扬于极盛</color>",
   "SubText.Impostor": "血溅千里，终无人生还，自取灭亡",
   "SubText.Neutral": "自扫门前雪，鹏程万里成大业",
@@ -83,19 +83,19 @@
   "Scientist": "科学家",
   "GuardianAngel": "守护天使",
   "Impostor": "内鬼",
-  "Shapeshifter": "化形人",
-  "Noisemaker": "广播员",
-  "Tracker": "侦察员",
-  "Phantom": "隐身人",
+  "Shapeshifter": "变形者",
+  "Noisemaker": "大嗓门",
+  "Tracker": "追踪者",
+  "Phantom": "幻象师",
   "EngineerEHR": "工程师",
   "ScientistEHR": "科学家",
   "ShapeshifterEHR": "EHR专属变形者",
   "GuardianAngelEHR": "EHR专属守护天使",
   "ImpostorEHR": "EHR专属内鬼",
   "CrewmateEHR": "EHR专属船员",
-  "NoisemakerEHR": "广播员",
+  "NoisemakerEHR": "EHR专属大嗓门",
   "TrackerEHR": "EHR专属追踪者",
-  "PhantomEHR": "隐身人",
+  "PhantomEHR": "EHR专属幻象师",
   "BountyHunter": "赏金猎人",
   "Mare": "梦魇",
   "FireWorks": "烟花爆破者",
@@ -250,7 +250,7 @@
   "Spiritcaller": "灵魂召唤者",
   "Amnesiac": "失忆者",
   "Doomsayer": "末日赌怪",
-  "LastImpostor": "翻盘者",
+  "LastImpostor": "绝境者",
   "Lovers": "恋人",
   "Madmate": "叛徒",
   "Watcher": "检票者",
@@ -599,14 +599,14 @@
   "BardInfo": "诗歌美，凶手罪，暗处危...船员废！",
   "NukerInfo": "使用变形，挫骨扬灰，一个不留",
   "EngineerEHRInfoLong": "(船员职业):\\n工程师可以在通信没有被破坏的情况下进入通风口,通风口在通讯被破坏后无法使用\n\\n背景故事:工程师其实并不是什么厉害人物,他之所以混进来这艘飞船是因为依托他的父亲——市长的推举,因此如你所见,他连使用飞船的高精尖设备也不会,只能掌握最基础的跳管,但是由于权势滔天,背靠关系,飞船上船长也不敢解雇他,所有人都只是把他和船员当作一个笑话,成为饭后闲谈,而工程师也觉得这样白吃白喝的日子也不赖,直到...他的到来",
-  "ScientistEHRInfoLong": "(船员职业):\\n科学家有一个便携式平板电脑,上面有船员的生命体征.你想咋用就咋用,获取自我报告,关于船员身体年龄的额外情报等...\n\\n背景故事:科学家是阿尔法制药公司的一个科研部工作人员,说是工作人员,其实是典型的偷税漏税,贪污受贿,作为身居高位的他居然还使用劣质原料和仪器降低成本,身价早已过千亿,这次飞船登录,是为了他自己寻得太空里一个叫做conasin的低成本高分子材料制作一台研究永生药的机器为己所用,这次出行他只带了生命检测仪器,方便有人受伤时狠狠敲诈一笔,但他没料到那个患者的到来...",
-  "ShapeshifterEHRInfoLong": "(内鬼职业):\\n化形人有变形能力,可以用来陷害其他船员.化形的时候外观为一个蛋,变形也只是暂时的\n\\n背景故事:化形人其实是正常人类,但是他是一个[实验]失败的变体,他曾到阿尔法制药高价买下一款易容药品想要使自己重回青春,但是劣质的原料无法长期维持他的容貌,并且每当服药/药效结束的时候,他的皮肤会剥离,血肉膨胀充气像一个蛋壳,长期使得皮肤裂痕累累,不成人形,他听说科学家也来到了这艘飞船,因此,他一定要复仇!",
-  "GuardianAngelEHRInfoLong": "(船员职业):\\n作为守护天使,你死亡时可以保护船员免受伤害",
+  "ScientistEHRInfoLong": "(船员职业):\\n科学家有一个便携式平板电脑,上面有船员的生命体征.你想咋用就咋用,获取自我报告,关于船员身体年龄的额外情报等...\n\\n背景故事:科学家是阿尔法制药公司的一个科研部工作人员,说是工作人员,其实是典型的偷税漏税,贪污受贿,作为身居高位的他居然还使用劣质原料和仪器降低成本,身价早已过千亿,这次飞船登录,是为了他自己寻得太空里一个叫做科纳辛的低成本高分子材料制作一台研究永生药的机器为己所用,这次出行他只带了生命检测仪器,方便有人受伤时狠狠敲诈一笔,但他没料到那个患者的到来...",
+  "ShapeshifterEHRInfoLong": "(内鬼职业):\\n变形者有变形能力,可以用来陷害其他船员.变形的时候外观为一个蛋,变形也只是暂时的\n\\n背景故事:变形者其实是正常人类,但是他是一个[实验]失败的变体,他曾到阿尔法制药高价买下一款易容药品想要使自己重回青春,但是劣质的原料无法长期维持他的容貌,并且每当服药/药效结束的时候,他的皮肤会剥离,血肉膨胀充气像一个蛋壳,长期使得皮肤裂痕累累,不成人形,他听说科学家也来到了这艘飞船,因此,他一定要复仇!",
+  "GuardianAngelEHRInfoLong": "(船员职业):\\n守护天使在死亡时可以保护船员免受伤害",
   "ImpostorEHRInfoLong": "(内鬼职业):\\n内鬼的目标只是简单地杀死船员,你可以破坏和跳管",
-  "CrewmateEHRInfoLong": "(船员职业):\\n作为一个船员,你的使命便是干掉内鬼&中立，或者完成任务你也就赢了",
-  "NoisemakerEHRInfoLong": "(船员职业):\\n作为广播员,当你死时,所有人会看到警报和一个指向你尸体的箭头",
-  "TrackerEHRInfoLong": "(船员职业):\\n作为追踪者,绑定一个人之后可以在地图上查看他的行踪",
-  "PhantomEHRInfoLong": "(内鬼职业):\\n作为隐身人,你可以暂时隐身一段时间.这段时间里没人发现你.",
+  "CrewmateEHRInfoLong": "(船员职业):\\n船员的使命便是干掉内鬼&中立，或者完成任务你也就赢了",
+  "NoisemakerEHRInfoLong": "(船员职业):\\n大嗓门死时,所有人会看到警报和一个指向你尸体的箭头",
+  "TrackerEHRInfoLong": "(船员职业):\\n追踪者在绑定一个人之后可以在地图上查看他的行踪",
+  "PhantomEHRInfoLong": "(内鬼职业):\\n幻象师可以暂时隐身一段时间.这段时间里没人发现你.",
   "BountyHunterInfoLong": "(内鬼职业):\\n作为赏金猎人,如果你杀死了你的目标,你的击杀冷却会骤降,但如果不是,你的刀cd会变长;赏金目标会定时更换",
   "FireWorksInfoLong": "(内鬼职业):\\n作为烟花爆破者, 通过变形/摸宠物安放烟花. 如果内鬼只剩你了, 你可以用变形/摸宠物让烟花爆炸并造成AOE伤害. 但注意, 你也会被炸死",
   "SerialKillerInfoLong": "(内鬼职业):\\n嗜血的天性让你的杀戮更快,但若不能及时用鲜血麻痹自己,你便会死于非命",
@@ -760,7 +760,7 @@
   "SpiritcallerInfoLong": "(中立职业):\\n灵魂召唤者可以把玩家被击杀后变成恶灵.这些恶灵可以通过短时间冻结其他玩家.或者阻挡他们的视线来帮助灵魂召唤者获胜.再或者,恶灵可以给灵魂召唤者一个护盾,短暂地保护灵魂召唤者免受被击杀",
   "AmnesiacInfoLong": "(中立阵营):\\n失忆者使用击杀或者报告按钮来记住玩家的身份. \\n\\n如果目标是内鬼, 失忆者将成为<b><color=#ff1919>逃亡者</color></b>. \\n如果目标是一名船员, 且符合条件, 失忆者将成为目标的身份(否则失忆者将成为一名<b><color=#FFB347>警长</color></b>). \\n如果目标是无刀中立或未指定的带刀中立, 失忆者将成为设置的中立身份. \\n如果目标是少数人中的带刀中立, 失忆者就会成为他们的身份",
   "DoomsayerInfoLong": "(中立阵营):\\n末日赌怪可以在会议期间猜测某个玩家的职业。如果是正确的，目标就会死亡，如果是错误的，就会自杀\\n猜测指令为：/bt [玩家编号] [职业名]\\n您可以在玩家名字前看到该玩家的编号，或者使用/id指令查看所有玩家的编号",
-  "LastImpostorInfoLong": "(附加职业):\\nLast Impostor gets reduced kill cooldown.",
+  "LastImpostorInfoLong": "(附加职业):\\n绝境者的击杀冷却时间减少。",
   "LoversInfoLong": "(附加职业),\\n恋人同生共死,荣辱与共.恋人互认以❤作为标志.恋人是独立获胜的.",
   "MadmateInfoLong": "(附加职业):\\n叛徒隶属内鬼.他们通常是船员的变种(具体看房主设置).像警长,告密,市长这些都能成为叛徒.叛徒的船员职业功能会发生变化.例如掷弹兵只能让船员失明.法官可以随意判决.",
   "WatcherInfoLong": "(附加职业):\\n会议期间可以看到具体的投票.",
