--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -565,6 +565,7 @@
   "TrapperInfo": "Freeze your killer for a few seconds",
   "OnboundInfo": "You can't be guessed",
   "AsthmaticInfo": "Stop And Go",
+  "KnightedInfo": "You have an extra vote (from the Monarch)",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
   "AntiTPInfo": "You can't be teleported",
