Well there you go peppercula.... ig.... (Thanks TommyXL)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2562,7 +2562,7 @@
   "Preset_8": "Preset 8",
   "Preset_9": "Preset 9",
   "Preset_10": "Preset 10",
-  "YouAreHostSuffix": " (YOU!)",
+  "YouAreHostSuffix": "YOU!",
   "Standard": "Standard",
   "SoloKombat": "Solo PVP",
   "ModeSoloKombat": "Gamemode: Solo PVP",
