--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1167,13 +1167,13 @@
   "RemainingText.EjectionSuffix.NKPlural": "remain.",
   "GSInfo.ImpCount": "<#ff1919>Impostors:</color> {0}",
   "GSInfo.MadmateCount": "<#ff1919>Madmates:</color> {0}",
-  "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> (excluding <#ff1919>Madmates</color>): {0}",
+  "GSInfo.ConvertedCount": "<#ffab1b>Converted Players</color> <size=70%>(excluding <#ff1919>Madmates</color>)</size>: {0}",
   "GSInfo.NNKCount": "<#ffff00>Non-Killing</color> <#ffab1b>Neutrals</color>: {0}",
   "GSInfo.NKCount": "<#ffab1b>Neutral</color> <#ff1919>Killers</color>: {0}",
   "GSInfo.CrewCount": "<#8cffff>Crewmates:</color> {0}",
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Number of <#ff9ace>Lovers</color> Alive: {0}",
-  "GSInfo.Tasks": "<#00ffa5>Completed Tasks:</color> {0}",
+  "GSInfo.Tasks": "<#00ffa5>Completed Tasks:</color> {0}/{1}",
   "GSRomanticState.0": "<#ff1493>Romantic</color> pair state: <#888888>Doesn't exist</color>",
   "GSRomanticState.1": "<#ff1493>Romantic</color> pair state: <#888888>Doesn't exist</color>",
   "GSRomanticState.2": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
