That's a lot of fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1779,6 +1779,7 @@
   "DeathReason.Asthma": "Asthma",
   "DeathReason.Assumed": "Assumed",
   "DeathReason.Negotiation": "Negotiation",
+  "DeathReason.Trapped": "Trapped",
   "DeathReason.Meteor": "Meteor Strike",
   "DeathReason.Lava": "Lava",
   "DeathReason.Tornado": "Tornado",
