Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1423,6 +1423,8 @@
   "SansMinKillCooldown": "Minimum kill cooldown",
   "BomberRadius": "Bomb radius (5x is about half a Cafeteria)",
   "NotifyGodAlive": "Inform players at meetings that God is still alive",
+  "God.KnowInfo": "God knows players'",
+  "Alignments": "Alignments",
   "TransporterTeleportMax": "Max number of teleports",
   "TriggerKill": "Kill",
   "ExperimentalRoleIndicator": "    <color=#ffff00>EXPERIMENTAL</color>",
@@ -2881,6 +2883,17 @@
   "Blackmailer": "Blackmailer",
   "BlackmailerInfo": "Blackmail Players",
   "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, you can blackmail players by clicking your kill button once on them. Blackmailed players' votes will be forced to be the same as your vote. Double click to kill normally.",
+  "Blackmailer.AbilityExpires": "Ability Expires",
+  "BMAE.AfterMeeting": "After Meeting",
+  "BMAE.Never": "Never",
+  "Blackmailer.MaxBlackmailedPlayersPerMeeting": "Max <#ffa500>Blackmailed</color> Players Per Meeting",
+  "Blackmailer.MaxBlackmailedPlayersAtOnce": "Max <#ffa500>Blackmailed</color> Players At Once",
+  "Blackmailer.WhoSeesBlackmailedPlayers": "Who Sees <#ffa500>Blackmailed</color> Players",
+  "BMWSBP.Blackmailer": "<#990000>Blackmailer</color>",
+  "BMWSBP.BlackmailerAndBlackmailed": "<#990000>Blackmailer</color> + <#ffa500>Blackmailed</color>",
+  "BMWSBP.Impostors": "<#ff1919>Impostors</color>",
+  "BMWSBP.Everyone": "Everyone",
+  "BlackmailedSuffix": "<#ffa500>BLACKMAILED</color>",
   "DGRM.None": "None",
   "DGRM.OnMeeting": "On Meeting",
   "DGRM.AfterTime": "Timer",
