Add Wasp, Trainee, Vortex

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1780,6 +1780,7 @@
   "DeathReason.Assumed": "Assumed",
   "DeathReason.Negotiation": "Negotiation",
   "DeathReason.Trapped": "Trapped",
+  "DeathReason.Stung": "Stung",
   "DeathReason.Meteor": "Meteor Strike",
   "DeathReason.Lava": "Lava",
   "DeathReason.Tornado": "Tornado",
@@ -2854,6 +2855,18 @@
   "pet_D2WormPet": "Worm",
   "pet_RANDOM_FOR_EVERYONE": "<color=#ffff00>Random</color>",
   "PlayerExemptedFromAFK": "{0} was exempted from AFK detection for 1 game",
+  "Wasp": "Wasp",
+  "WaspInfo": "Sting Players",
+  "WaspInfoLong": "(Impostors):\\nAs the Wasp, you can sting players by using your kill button on them. If the player has a kill button they will die after a few seconds. Otherwise, they will have a ◀ next to their name in the next meeting. They will die after the meeting if the wasp isn't ejected.\\n\\nWhen someone tries to kill you, you may evade the kill based on the host's settings. If so, 2 things can happen:\\n1. You become aggressive and go into swarm mode with no kill cooldown for some time.\\n2. You get pest controlled. This will daze you, Stunting your vision, speed and ability to sting for some time.\\nNote: If you evade a kill, you cannot evade kills, sabotage or vent for the rest of that round.",
+  "Wasp.StingCooldown": "Sting Cooldown",
+  "Wasp.KillDelay": "Sting Kill Delay",
+  "Wasp.EvadeKills": "Evade Kills",
+  "Wasp.SwarmModeDuration": "Swarm Mode Duration",
+  "Wasp.WaspDiesAfterSwarmEnd": "Suicide After Swarm Mode Ends",
+  "Wasp.PestControlDuration": "Pest Control Duration",
+  "Wasp.PestControlSpeed": "Speed During Pest Control",
+  "Wasp.PestControlVision": "Vision During Pest Control",
+  "Wasp.SwarmModeSuffix": "<#ffff00>You've been attacked and entered swarm mode for {0} seconds!</color>",
   "Swapster": "Swapster",
   "SwapsterInfo": "Swap Players",
   "SwapsterInfoLong": "(Impostors):\\nAs the Swapster, you can select 2 players using your shapeshift menu to swap them.",
@@ -3290,6 +3303,12 @@
   "VentguardNotifyOnBlockedVentUse": "Notify When Someone Tries to Use a Blocked Vent",
   "VentguardBlocksResetOnMeeting": "Reset Blocked Vents Every Meeting",
   "VentBlockSuccess": "This vent is now blocked",
+  "Vortex": "Vortex",
+  "VortexInfo": "Your victims' bodies teleport to a random vent",
+  "VortexInfoLong": "(Neutrals):\\nAs the Vortex, when you kill someone, their body teleports to a random vent. The body will be reported in the vent.",
+  "Vortex.IfTargetCannotBeTeleported": "If the target cannot be teleported to a random vent",
+  "Vortex.NoTPMode.Block": "Cancel Kill",
+  "Vortex.NoTPMode.DoWithoutTP": "Kill Without TP",
   "Enigma": "Enigma",
   "EnigmaInfo": "Get Clues about Killers",
   "EnigmaInfoLong": "(Crewmates):\\nAs the Enigma, you get a random clue about the killer each meeting, depending on the setting, you may have to report the body to receive a clue. The more tasks you complete the preciser the clues get.\\n\\n<size=70%><u><b>Light colors:</b></u> Red, Pink, Orange, Yellow, White, Cyan, Lime, Rose, Banana, Coral\\n<u><b>Dark colors:</b></u> Blue, Green, Black, Purple, Brown, Maroon, Gray, Tan</size>",
@@ -4438,6 +4457,11 @@
   "RookieInfo": "You Can't Kill on the First Round",
   "RookieInfoLong": "(Add-ons):\\nYou can't kill on the first round.",
   "Prefix.Rookie": "Rookie",
+  "Trainee": "Trainee",
+  "TraineeInfo": "You Can't Vent/Sabotage/SS/Pet Round 1",
+  "TraineeInfoLong": "(Add-ons):\\nYou can't vent, sabotage, shapeshift, or pet on the first round.",
+  "Prefix.Trainee": "Trainee",
+  "TraineeNotify": "<#ffff00>As the <#4287f5>Trainee</color>, you can't vent, sabotage, shapeshift, or pet on the first round!</color>",
   "Soothsayer": "Soothsayer",
   "SoothsayerInfo": "Predict Who Kills You",
   "SoothsayerInfoLong": "(Crewmates):\\nAs the Soothsayer, you can predict who kills you. If you're correct, when you die, everyone will be notified of the killer's identity.",
