--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1374,6 +1374,7 @@
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
   "LIRoleForOtherImps": "Other <#ff1919>Impostors</color> see <#ff9ace>Loving</color> <#ff1919>Impostor</color> as",
   "PrivateChat": "Enable Private Chat for <color=#ff9ace>Lovers</color> <#ffff00>(VERY EXPERIMENTAL!!!!)</color> (REQUIRES DOUBLE EJECTION SCREEN)",
+  "PrivateChatForLoversOnly": "Try Setting the Chat Visible Only for the Lovers Instead of Everyone <#ffff00>(EVEN MORE EXPERIMENTAL)</color>",
   "GuessAbility": "Guessers Can Guess <color=#ff9ace>Lovers</color>",
   "AddonCanBeGuessed": "Can be Guessed",
   "ConvertedAddonCanBeGuessed": "{role} can be guessed",
