--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1558,6 +1558,7 @@
   "MessengerMessage.3": "I was a(n) {0}",
   "MessengerTitle": "<#ff0000>Message from {0}</color>",
   "DisableLobbyMusic": "Disable Lobby Music",
+  "EnableCommandHelper": "Enable Command Helper",
   "Evolver": "Evolver",
   "EvolverInfo": "Select an Upgrade After Each Meeting",
   "EvolverInfoLong": "(Neutrals):\\nAs the Evolver, you can choose an upgrade after each meeting. Pet to cycle between the available upgrades. The same upgrade can appear multiple times. Once the timer to pick ends, your upgrade will be applied.\\n\\n<size=70%><b><u>Upgrades:</u></b>\\n- Decrease Kill Cooldown (by 2.5s)\\n- Gain Impostor Vision (unaffected by lights sabotage)\\n- Increase Vision (by 0.4x)\\n- Increase Speed (by 0.25x)\\n- Increase Kill Distance (Short → Medium → Long)\\n- Gain Venting Ability (and 1 use)\\n- Increase Venting Use Limit (by 3)\\n- Gain Sabotage Ability (and 1 use)\\n- Increase Sabotage Use Limit (by 2)\\n- Gain Shield (cannot be killed in the current round)</size>\\n\\n<u><b>Remarks:</b></u>\\nIf you can vent, the number of vent uses you have is displayed next to your role name like this: <b>(V: 1)</b> - Same with the sabotage use limit: <b>(S: 2)</b>",
@@ -4127,7 +4128,7 @@
   "CTF_EnemyFlagTaken": "Your team took the enemy's flag!",
   "CTF_BlueTeamWins": "The Blue Team wins!",
   "CTF_YellowTeamWins": "The Yellow Team wins!",
-  "CTF_PlayerStats": "<#00ffa5>Total Flag Carrying Time: <#ffffff>{0}s</color> - Total Tags: <#ffffff>{1}</color></color>",
+  "CTF_PlayerStats": "<#00ffa5>Carried For: <#ffffff>{0}s</color> | Tags: <#ffffff>{1}</color></color>",
   "CTF_Notify_EnemyTeamRoom": "The enemy team is in <#00ffa5>{0}</color>",
   "CTF_TeamMemberFallen": "{0} has fallen!",
   "CTF_ButtonText": "PICK UP",
